layout & more random

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .ChessBoard {
+  margin-top: auto;
+  max-width: fit-content;
 
-  margin-left: 1%;
-  margin-right: 50%;
   align-items: center;
   align-content: center;
   text-align: center;
