--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .ChessBoard {
-  max-width: 500px;
+  width: 500px;
   align-items: center;
   align-content: center;
   text-align: center;
+}
+.TabMenu {
+  display: flex;
+  align-content: center;
 }
