--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 .ChessBoard {
-  width: 500px;
+  width: 80%;
   align-items: center;
   align-content: center;
   text-align: center;
 }
 .TabMenu {
   display: flex;
-  align-content: center;
 }
